fixed cursor not showing on blog page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,6 @@ body {
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    cursor: none !important;
 }
 
 img {
